--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
-    "name": "ghostwriter/wip",
-    "description": "Here be dragons",
+    "name": "ghostwriter/code",
+    "description": "Structured PHP code generation and modification through an abstract syntax tree (AST)",
     "license": "BSD-3-Clause",
     "type": "library",
     "keywords": [
         "ghostwriter",
-        "wip"
+        "code"
     ],
     "authors": [
         {
@@ -15,13 +15,13 @@
             "role": "Developer"
         }
     ],
-    "homepage": "https://github.com/ghostwriter/wip",
+    "homepage": "https://github.com/ghostwriter/code",
     "support": {
-        "issues": "https://github.com/ghostwriter/wip/issues",
-        "forum": "https://github.com/ghostwriter/wip/discussions",
-        "source": "https://github.com/ghostwriter/wip",
-        "docs": "https://github.com/ghostwriter/wip",
-        "rss": "https://github.com/ghostwriter/wip/releases.atom"
+        "issues": "https://github.com/ghostwriter/code/issues",
+        "forum": "https://github.com/ghostwriter/code/discussions",
+        "source": "https://github.com/ghostwriter/code",
+        "docs": "https://github.com/ghostwriter/code",
+        "rss": "https://github.com/ghostwriter/code/releases.atom"
     },
     "funding": [
         {
@@ -30,26 +30,28 @@
         }
     ],
     "require": {
-        "php": ">=8.0, <8.2",
-        "ghostwriter/container": "^0.3",
-        "ghostwriter/event-dispatcher": "^0.1"
+        "php": ">=8.0,<8.2",
+        "ghostwriter/container": "^0.4",
+        "ghostwriter/event-dispatcher": "^0.2",
+        "ghostwriter/result": "^0.1",
+        "nikic/php-parser": "^4.13"
     },
     "require-dev": {
-        "phpbench/phpbench": "^1.2.5",
-        "phpunit/phpunit": "^9.5.20",
-        "psalm/plugin-phpunit": "^0.16.1",
-        "rector/rector": "^0.12.23",
-        "roave/infection-static-analysis-plugin": "^1.18.0",
+        "phpbench/phpbench": "^1.2",
+        "phpunit/phpunit": "^9.5",
+        "psalm/plugin-phpunit": "^0.16",
+        "rector/rector": "^0.12",
+        "roave/infection-static-analysis-plugin": "^1.18",
         "roave/security-advisories": "dev-latest",
-        "symplify/easy-coding-standard": "^10.2.6",
-        "vimeo/psalm": "^4.23.0"
+        "symplify/easy-coding-standard": "^10.2",
+        "vimeo/psalm": "^4.23"
     },
     "replace": {},
     "minimum-stability": "stable",
     "prefer-stable": true,
     "autoload": {
         "psr-4": {
-            "Ghostwriter\\wip\\": "src/"
+            "Ghostwriter\\Code\\": "src/"
         },
         "files": [
             "src/constants.php",
@@ -58,7 +60,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Ghostwriter\\wip\\Tests\\": "tests/"
+            "Ghostwriter\\Code\\Tests\\": "tests/"
         }
     },
     "config": {
